--- a/github/workflows/actions.yml
+++ b/github/workflows/actions.yml
@@ -4,5 +4,7 @@ jobs:
   Echo:
     runs-on: ubuntu-latest
     steps:
-       - name: echo hello
-         run: echo hello
+       - name: cat temp.txt
+         run: cat temp.txt
+         
+         
